--- a/composer.json
+++ b/composer.json
@@ -9,17 +9,19 @@
     "license": "MIT",
     "require": {
         "php": "^7.3",
-        "sylius/sylius": "^1.7"
+        "sylius/sylius": "^1.8"
     },
     "require-dev": {
-        "phpstan/phpstan-doctrine": "^0.11",
-        "phpstan/phpstan-shim": "^0.11",
-        "phpstan/phpstan-webmozart-assert": "^0.11",
+        "phpstan/phpstan": "^0.12",
+        "phpstan/phpstan-doctrine": "^0.12",
+        "phpstan/phpstan-strict-rules": "^0.12",
+        "phpstan/phpstan-symfony": "^0.12",
+        "phpstan/phpstan-webmozart-assert": "^0.12",
         "sensiolabs/security-checker": "^5.0",
-        "sylius-labs/coding-standard": "^3.1",
-        "symfony/debug-bundle": "^4.3",
-        "symfony/dotenv": "^4.3",
-        "symfony/intl": "^4.3"
+        "sylius-labs/coding-standard": "^3.2",
+        "symfony/debug-bundle": "^4.4",
+        "symfony/dotenv": "^4.4",
+        "symfony/intl": "^4.4"
     },
     "autoload": {
         "psr-4": {
